# URMS

./: .cursorignore  .dockerignore  .editorconfig  .env.example  .gh-run-artifacts-24287359704.json  .gh-run-artifacts-24287510612.json  .gh-run-artifacts-24287800182.json  .gh-run-artifacts.json  .gh-run-list.json  .gh_branch_protection.json  .gitattributes  .gitignore  .prettierignore  PR_DESCRIPTION.md  README.md  artifact-inventory.json  artifacts-list.json  build_log.txt  cleanup-v4-migration.ps1  comment.txt  comment_2656972046.txt  comment_body.txt  current_workflow_backup.txt  diff_legacy_to_primary.patch  diff_legacy_to_promoted.patch  dispatch_and_poll.ps1  docker-compose.yml  e2e_run_22656994190_summary.json  e2e_run_22657053891_summary.json  e2e_run_22657321139_summary.json  eslint.config.mjs  found-comment-api.json  gh-run-24610025831-logs.txt  gh-run-24610674361-logs.txt  index.html  issue-31.json  issue-32.json  issue-35.json  latest_comment.txt  latest_comment.txt.bak.20260419222536  (+39 more)
.cargo/: config.toml
.gh-logs/: analyze-diff-21953523900.json  analyze-diff-21955508562.json  analyze-diff-21966845756.json  analyze-diff-21967368810.json  analyze-diff-21992590638.json  analyze-diff-21992802193.json  analyze-diff-21995805342.json  analyze-diff-21997586493.json  analyze-diff-22013647320.json  analyze-diff-22013812975.json  analyze-diff-22014749979.json  analyze-diff-22031187851.json  analyze-diff-22031229484.json  analyze-diff-22031523724.json  analyze-diff-22031857517.json  analyze-diff-22037505245.json  analyze-diff-22063846022.json  (+20 more)
Backend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
Backend/src-tauri/icons/: icon.icns
Backend/src-tauri/src/: error.rs  lib.rs  main.rs
Backend/src-tauri/src/base/: base_manager.rs  mod.rs
Backend/src-tauri/src/core/: mod.rs
Backend/src-tauri/src/subsystems/: mod.rs
Backend/src-tauri/src/subsystems/asset/: asset_manager.rs  commands.rs  mod.rs
Backend/src-tauri/src/subsystems/calendar/: auth_adapter.rs  commands.rs  google_adapter.rs  manager.rs  mod.rs  tests.rs
Backend/src-tauri/src/subsystems/file/: commands.rs  file_manager.rs  mod.rs
Backend/src-tauri/src/subsystems/finance/: commands.rs  finance_manager.rs  mod.rs
Backend/src-tauri/src/subsystems/iot/: commands.rs  iot_manager.rs  mod.rs
Backend/src-tauri/src/subsystems/network/: commands.rs  mod.rs  network_manager.rs
Backend/src-tauri/src/subsystems/schedule/: commands.rs  mod.rs  schedule_manager.rs
Backend/src-tauri/src/subsystems/settings/: commands.rs
Backend/src-tauri/src/subsystems/weather/: commands.rs  mod.rs  weather_adapter.rs
Backend/src-tauri/src/system/: commands.rs  mod.rs  system_manager.rs
Backend/src-tauri/tests/: auth_adapter_integration.rs  weather_adapter_tests.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
(+1282 files in other folders)
