[package]
name = "urms"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "urms_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
winapi = { version = "0.3", features = ["winnt", "handleapi", "synchapi", "processthreadsapi", "winbase"] }
simplelog = "0.12"
flexi_logger = "0.22"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
keyring = "1.0"
base64 = "0.21"
oauth2 = "4"
webbrowser = "0.6"
futures = "0.3"
httpmock = { version = "0.6", optional = true }

[dev-dependencies]
httpmock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
