[package]
name = "urms-desktop"
version = "0.4.0-alpha"
description = "URMS perception layer desktop shell"
authors = ["URMS"]
edition = "2021"

[lib]
name = "urms_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
